Bug 1634363 - Avoid firing focus on iframe when raising window if actual focus out-of-process. r=NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D75527